fix header formatting issue on mobile

--- a/src/capsules/site-header/site-header.css
+++ b/src/capsules/site-header/site-header.css
@@ -230,7 +230,7 @@
 
   .nav-pill {
     --nav-toggle-icon-size: 1.4rem;
-    --nav-toggle-size: 48px;
+    --nav-toggle-size: 62px;
     padding: 0;
     background: transparent;
     border: none;
